SQLGrammarParser.py
# Generated from SQLGrammar.g4 by ANTLR 4.9
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class SQLGrammarParser ( Parser ):

    grammarFileName = "SQLGrammar.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'('", "','", "')'", "'='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "CREATE", "TABLE", "DROP", 
                      "INSERT", "INTO", "VALUES", "SHOW", "TABLES", "SELECT", 
                      "FROM", "WHERE", "STRING", "INT", "NAME", "STAR", 
                      "STRING_VALUE", "INT_VALUE", "WS" ]

    RULE_statements = 0
    RULE_statement = 1
    RULE_query = 2
    RULE_create = 3
    RULE_drop = 4
    RULE_insert = 5
    RULE_show = 6
    RULE_select = 7
    RULE_column_definition = 8
    RULE_columns = 9
    RULE_type = 10
    RULE_value = 11

    ruleNames =  [ "statements", "statement", "query", "create", "drop", 
                   "insert", "show", "select", "column_definition", "columns", 
                   "type", "value" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    CREATE=6
    TABLE=7
    DROP=8
    INSERT=9
    INTO=10
    VALUES=11
    SHOW=12
    TABLES=13
    SELECT=14
    FROM=15
    WHERE=16
    STRING=17
    INT=18
    NAME=19
    STAR=20
    STRING_VALUE=21
    INT_VALUE=22
    WS=23

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StatementsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(SQLGrammarParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SQLGrammarParser.StatementContext)
            else:
                return self.getTypedRuleContext(SQLGrammarParser.StatementContext,i)


        def getRuleIndex(self):
            return SQLGrammarParser.RULE_statements

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatements" ):
                listener.enterStatements(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatements" ):
                listener.exitStatements(self)




    def statements(self):

        localctx = SQLGrammarParser.StatementsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_statements)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 25 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 24
                self.statement()
                self.state = 27 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SQLGrammarParser.CREATE) | (1 << SQLGrammarParser.DROP) | (1 << SQLGrammarParser.INSERT) | (1 << SQLGrammarParser.SHOW) | (1 << SQLGrammarParser.SELECT))) != 0)):
                    break

            self.state = 29
            self.match(SQLGrammarParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def query(self):
            return self.getTypedRuleContext(SQLGrammarParser.QueryContext,0)


        def WS(self, i:int=None):
            if i is None:
                return self.getTokens(SQLGrammarParser.WS)
            else:
                return self.getToken(SQLGrammarParser.WS, i)

        def getRuleIndex(self):
            return SQLGrammarParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = SQLGrammarParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 31
            self.query()
            self.state = 33
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SQLGrammarParser.WS:
                self.state = 32
                self.match(SQLGrammarParser.WS)


            self.state = 35
            self.match(SQLGrammarParser.T__0)
            self.state = 36
            self.match(SQLGrammarParser.WS)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class QueryContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def create(self):
            return self.getTypedRuleContext(SQLGrammarParser.CreateContext,0)


        def drop(self):
            return self.getTypedRuleContext(SQLGrammarParser.DropContext,0)


        def insert(self):
            return self.getTypedRuleContext(SQLGrammarParser.InsertContext,0)


        def show(self):
            return self.getTypedRuleContext(SQLGrammarParser.ShowContext,0)


        def select(self):
            return self.getTypedRuleContext(SQLGrammarParser.SelectContext,0)


        def getRuleIndex(self):
            return SQLGrammarParser.RULE_query

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQuery" ):
                listener.enterQuery(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQuery" ):
                listener.exitQuery(self)




    def query(self):

        localctx = SQLGrammarParser.QueryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_query)
        try:
            self.state = 43
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [SQLGrammarParser.CREATE]:
                self.enterOuterAlt(localctx, 1)
                self.state = 38
                self.create()
                pass
            elif token in [SQLGrammarParser.DROP]:
                self.enterOuterAlt(localctx, 2)
                self.state = 39
                self.drop()
                pass
            elif token in [SQLGrammarParser.INSERT]:
                self.enterOuterAlt(localctx, 3)
                self.state = 40
                self.insert()
                pass
            elif token in [SQLGrammarParser.SHOW]:
                self.enterOuterAlt(localctx, 4)
                self.state = 41
                self.show()
                pass
            elif token in [SQLGrammarParser.SELECT]:
                self.enterOuterAlt(localctx, 5)
                self.state = 42
                self.select()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CreateContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CREATE(self):
            return self.getToken(SQLGrammarParser.CREATE, 0)

        def WS(self, i:int=None):
            if i is None:
                return self.getTokens(SQLGrammarParser.WS)
            else:
                return self.getToken(SQLGrammarParser.WS, i)

        def TABLE(self):
            return self.getToken(SQLGrammarParser.TABLE, 0)

        def NAME(self):
            return self.getToken(SQLGrammarParser.NAME, 0)

        def column_definition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SQLGrammarParser.Column_definitionContext)
            else:
                return self.getTypedRuleContext(SQLGrammarParser.Column_definitionContext,i)


        def getRuleIndex(self):
            return SQLGrammarParser.RULE_create

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCreate" ):
                listener.enterCreate(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCreate" ):
                listener.exitCreate(self)




    def create(self):

        localctx = SQLGrammarParser.CreateContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_create)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 45
            self.match(SQLGrammarParser.CREATE)
            self.state = 46
            self.match(SQLGrammarParser.WS)
            self.state = 47
            self.match(SQLGrammarParser.TABLE)
            self.state = 48
            self.match(SQLGrammarParser.WS)
            self.state = 49
            self.match(SQLGrammarParser.NAME)
            self.state = 51
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SQLGrammarParser.WS:
                self.state = 50
                self.match(SQLGrammarParser.WS)


            self.state = 53
            self.match(SQLGrammarParser.T__1)
            self.state = 54
            self.column_definition()
            self.state = 59
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==SQLGrammarParser.T__2:
                self.state = 55
                self.match(SQLGrammarParser.T__2)
                self.state = 56
                self.column_definition()
                self.state = 61
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 62
            self.match(SQLGrammarParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DropContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DROP(self):
            return self.getToken(SQLGrammarParser.DROP, 0)

        def WS(self, i:int=None):
            if i is None:
                return self.getTokens(SQLGrammarParser.WS)
            else:
                return self.getToken(SQLGrammarParser.WS, i)

        def TABLE(self):
            return self.getToken(SQLGrammarParser.TABLE, 0)

        def NAME(self):
            return self.getToken(SQLGrammarParser.NAME, 0)

        def getRuleIndex(self):
            return SQLGrammarParser.RULE_drop

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDrop" ):
                listener.enterDrop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDrop" ):
                listener.exitDrop(self)




    def drop(self):

        localctx = SQLGrammarParser.DropContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_drop)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            self.match(SQLGrammarParser.DROP)
            self.state = 65
            self.match(SQLGrammarParser.WS)
            self.state = 66
            self.match(SQLGrammarParser.TABLE)
            self.state = 67
            self.match(SQLGrammarParser.WS)
            self.state = 68
            self.match(SQLGrammarParser.NAME)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InsertContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INSERT(self):
            return self.getToken(SQLGrammarParser.INSERT, 0)

        def WS(self, i:int=None):
            if i is None:
                return self.getTokens(SQLGrammarParser.WS)
            else:
                return self.getToken(SQLGrammarParser.WS, i)

        def INTO(self):
            return self.getToken(SQLGrammarParser.INTO, 0)

        def NAME(self):
            return self.getToken(SQLGrammarParser.NAME, 0)

        def VALUES(self):
            return self.getToken(SQLGrammarParser.VALUES, 0)

        def value(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SQLGrammarParser.ValueContext)
            else:
                return self.getTypedRuleContext(SQLGrammarParser.ValueContext,i)


        def getRuleIndex(self):
            return SQLGrammarParser.RULE_insert

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInsert" ):
                listener.enterInsert(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInsert" ):
                listener.exitInsert(self)




    def insert(self):

        localctx = SQLGrammarParser.InsertContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_insert)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.match(SQLGrammarParser.INSERT)
            self.state = 71
            self.match(SQLGrammarParser.WS)
            self.state = 72
            self.match(SQLGrammarParser.INTO)
            self.state = 73
            self.match(SQLGrammarParser.WS)
            self.state = 74
            self.match(SQLGrammarParser.NAME)
            self.state = 75
            self.match(SQLGrammarParser.WS)
            self.state = 76
            self.match(SQLGrammarParser.VALUES)
            self.state = 78
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SQLGrammarParser.WS:
                self.state = 77
                self.match(SQLGrammarParser.WS)


            self.state = 80
            self.match(SQLGrammarParser.T__1)
            self.state = 82
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SQLGrammarParser.WS:
                self.state = 81
                self.match(SQLGrammarParser.WS)


            self.state = 84
            self.value()
            self.state = 95
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 86
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==SQLGrammarParser.WS:
                        self.state = 85
                        self.match(SQLGrammarParser.WS)


                    self.state = 88
                    self.match(SQLGrammarParser.T__2)
                    self.state = 90
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==SQLGrammarParser.WS:
                        self.state = 89
                        self.match(SQLGrammarParser.WS)


                    self.state = 92
                    self.value() 
                self.state = 97
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

            self.state = 99
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SQLGrammarParser.WS:
                self.state = 98
                self.match(SQLGrammarParser.WS)


            self.state = 101
            self.match(SQLGrammarParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ShowContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SHOW(self):
            return self.getToken(SQLGrammarParser.SHOW, 0)

        def WS(self):
            return self.getToken(SQLGrammarParser.WS, 0)

        def TABLES(self):
            return self.getToken(SQLGrammarParser.TABLES, 0)

        def getRuleIndex(self):
            return SQLGrammarParser.RULE_show

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterShow" ):
                listener.enterShow(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitShow" ):
                listener.exitShow(self)




    def show(self):

        localctx = SQLGrammarParser.ShowContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_show)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.match(SQLGrammarParser.SHOW)
            self.state = 104
            self.match(SQLGrammarParser.WS)
            self.state = 105
            self.match(SQLGrammarParser.TABLES)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SelectContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SELECT(self):
            return self.getToken(SQLGrammarParser.SELECT, 0)

        def WS(self, i:int=None):
            if i is None:
                return self.getTokens(SQLGrammarParser.WS)
            else:
                return self.getToken(SQLGrammarParser.WS, i)

        def columns(self):
            return self.getTypedRuleContext(SQLGrammarParser.ColumnsContext,0)


        def FROM(self):
            return self.getToken(SQLGrammarParser.FROM, 0)

        def NAME(self, i:int=None):
            if i is None:
                return self.getTokens(SQLGrammarParser.NAME)
            else:
                return self.getToken(SQLGrammarParser.NAME, i)

        def WHERE(self):
            return self.getToken(SQLGrammarParser.WHERE, 0)

        def value(self):
            return self.getTypedRuleContext(SQLGrammarParser.ValueContext,0)


        def getRuleIndex(self):
            return SQLGrammarParser.RULE_select

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSelect" ):
                listener.enterSelect(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSelect" ):
                listener.exitSelect(self)




    def select(self):

        localctx = SQLGrammarParser.SelectContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_select)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self.match(SQLGrammarParser.SELECT)
            self.state = 108
            self.match(SQLGrammarParser.WS)
            self.state = 109
            self.columns()
            self.state = 110
            self.match(SQLGrammarParser.WS)
            self.state = 111
            self.match(SQLGrammarParser.FROM)
            self.state = 112
            self.match(SQLGrammarParser.WS)
            self.state = 113
            self.match(SQLGrammarParser.NAME)
            self.state = 126
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                self.state = 114
                self.match(SQLGrammarParser.WS)
                self.state = 115
                self.match(SQLGrammarParser.WHERE)
                self.state = 116
                self.match(SQLGrammarParser.WS)
                self.state = 117
                self.match(SQLGrammarParser.NAME)
                self.state = 119
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==SQLGrammarParser.WS:
                    self.state = 118
                    self.match(SQLGrammarParser.WS)


                self.state = 121
                self.match(SQLGrammarParser.T__4)
                self.state = 123
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==SQLGrammarParser.WS:
                    self.state = 122
                    self.match(SQLGrammarParser.WS)


                self.state = 125
                self.value()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Column_definitionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self):
            return self.getToken(SQLGrammarParser.NAME, 0)

        def WS(self, i:int=None):
            if i is None:
                return self.getTokens(SQLGrammarParser.WS)
            else:
                return self.getToken(SQLGrammarParser.WS, i)

        def type(self):
            return self.getTypedRuleContext(SQLGrammarParser.TypeContext,0)


        def getRuleIndex(self):
            return SQLGrammarParser.RULE_column_definition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterColumn_definition" ):
                listener.enterColumn_definition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitColumn_definition" ):
                listener.exitColumn_definition(self)




    def column_definition(self):

        localctx = SQLGrammarParser.Column_definitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_column_definition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SQLGrammarParser.WS:
                self.state = 128
                self.match(SQLGrammarParser.WS)


            self.state = 131
            self.match(SQLGrammarParser.NAME)
            self.state = 132
            self.match(SQLGrammarParser.WS)
            self.state = 133
            self.type()
            self.state = 135
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SQLGrammarParser.WS:
                self.state = 134
                self.match(SQLGrammarParser.WS)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ColumnsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NAME(self, i:int=None):
            if i is None:
                return self.getTokens(SQLGrammarParser.NAME)
            else:
                return self.getToken(SQLGrammarParser.NAME, i)

        def WS(self, i:int=None):
            if i is None:
                return self.getTokens(SQLGrammarParser.WS)
            else:
                return self.getToken(SQLGrammarParser.WS, i)

        def STAR(self):
            return self.getToken(SQLGrammarParser.STAR, 0)

        def getRuleIndex(self):
            return SQLGrammarParser.RULE_columns

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterColumns" ):
                listener.enterColumns(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitColumns" ):
                listener.exitColumns(self)




    def columns(self):

        localctx = SQLGrammarParser.ColumnsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_columns)
        self._la = 0 # Token type
        try:
            self.state = 152
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [SQLGrammarParser.NAME]:
                self.enterOuterAlt(localctx, 1)
                self.state = 137
                self.match(SQLGrammarParser.NAME)
                self.state = 148
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,18,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 139
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if _la==SQLGrammarParser.WS:
                            self.state = 138
                            self.match(SQLGrammarParser.WS)


                        self.state = 141
                        self.match(SQLGrammarParser.T__2)
                        self.state = 143
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if _la==SQLGrammarParser.WS:
                            self.state = 142
                            self.match(SQLGrammarParser.WS)


                        self.state = 145
                        self.match(SQLGrammarParser.NAME) 
                    self.state = 150
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,18,self._ctx)

                pass
            elif token in [SQLGrammarParser.STAR]:
                self.enterOuterAlt(localctx, 2)
                self.state = 151
                self.match(SQLGrammarParser.STAR)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(SQLGrammarParser.STRING, 0)

        def INT(self):
            return self.getToken(SQLGrammarParser.INT, 0)

        def getRuleIndex(self):
            return SQLGrammarParser.RULE_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType" ):
                listener.enterType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType" ):
                listener.exitType(self)




    def type(self):

        localctx = SQLGrammarParser.TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 154
            _la = self._input.LA(1)
            if not(_la==SQLGrammarParser.STRING or _la==SQLGrammarParser.INT):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValueContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING_VALUE(self):
            return self.getToken(SQLGrammarParser.STRING_VALUE, 0)

        def INT_VALUE(self):
            return self.getToken(SQLGrammarParser.INT_VALUE, 0)

        def getRuleIndex(self):
            return SQLGrammarParser.RULE_value

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValue" ):
                listener.enterValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValue" ):
                listener.exitValue(self)




    def value(self):

        localctx = SQLGrammarParser.ValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_value)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 156
            _la = self._input.LA(1)
            if not(_la==SQLGrammarParser.STRING_VALUE or _la==SQLGrammarParser.INT_VALUE):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





